--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -92,11 +92,22 @@
                     android:textSize="15sp"
                     tools:text="@string/hotel_address" />
 
+                <Button
+                    android:id="@+id/contactanos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvAddress"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/black"
+                    android:text="Contactanos"
+                    android:textColor="@color/white" />
+
                 <View
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_below="@+id/tvAddress"
+                    android:layout_below="@+id/contactanos"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/background_shape" />
 
@@ -247,6 +258,7 @@
 
         </RelativeLayout>
     </ScrollView>
+
     <RelativeLayout
         android:id="@+id/payment_container"
         android:layout_width="match_parent"
@@ -274,10 +286,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="25dp"
-            tools:text="Inicio"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            tools:text="Inicio" />
 
         <TextView
             android:id="@+id/intermedio"
@@ -285,8 +297,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="25dp"
-            android:text="-"
             android:layout_toEndOf="@+id/tiempoReserva"
+            android:text="-"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="italic" />
@@ -297,8 +309,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="25dp"
-            android:text="Fin"
             android:layout_toEndOf="@id/intermedio"
+            android:text="Fin"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="italic" />
@@ -311,8 +323,6 @@
             android:layout_marginEnd="15dp"
             android:backgroundTint="@color/white"
             android:text="Pay Now" />
-
-
 
 
     </RelativeLayout>
